--- a/rpc_jobs/rpc_aio.yml
+++ b/rpc_jobs/rpc_aio.yml
@@ -6,10 +6,6 @@
       - kilo:
           branch: kilo
           branches: "kilo.*"
-          # There's no kilo branch on [1], but liberty-12.2 branch seems to
-          # work OK.
-          # [1] https://github.com/rcbops-qe/kibana-selenium.git
-          KIBANA_SELENIUM_BRANCH: "liberty-12.2"
       - liberty:
           branch: liberty-12.2
           branches: "liberty-.*"
@@ -56,8 +52,11 @@
       # working well, additional stages may be added.
       - leapfrogupgrade:
           ACTION_STAGES: >-
+            Leapfrog Upgrade,
             Install Tempest,
-            Leapfrog Upgrade
+            Tempest Tests,
+            Prepare Kibana Selenium,
+            Kibana Tests
           GENERATE_TEST_NETWORKS: "6"
           GENERATE_TEST_SERVERS: "4"
           GENERATE_TEST_VOLUMES: "12"
@@ -319,9 +318,14 @@
                 maas.deploy()
                 maas.verify()
                 tempest.tempest()
-                // TODO(odyssey4me):
-                // Adjust this if selenium tests are ever used for minor/leapfrog upgrades
-                kibana_branch = env.STAGES.contains("Major Upgrade") ? env.UPGRADE_FROM_REF : env.KIBANA_SELENIUM_BRANCH
+                // TODO(mattt): Handle situation where env.UPGRADE_FROM_REF is
+                // set to the kilo PR
+                if (env.STAGES.contains("Major Upgrade")
+                    || env.STAGES.contains("Leapfrog Upgrade")) {{
+                  kibana_branch = env.UPGRADE_FROM_REF
+                }} else {{
+                  kibana_branch = env.KIBANA_SELENIUM_BRANCH
+                }}
                 kibana.kibana(kibana_branch)
                 holland.holland()
                 if (env.STAGES.contains("Minor Upgrade")) {{
@@ -335,6 +339,11 @@
                   holland.holland()
                 }} else if (env.STAGES.contains("Leapfrog Upgrade")) {{
                   deploy.upgrade_leapfrog(environment_vars: environment_vars)
+                  maas.deploy()
+                  maas.verify()
+                  tempest.tempest()
+                  kibana.kibana(env.KIBANA_SELENIUM_BRANCH)
+                  holland.holland()
                 }}
               }} catch (e) {{
                 print(e)
