--- a/rpc_jobs/rpc_aio.yml
+++ b/rpc_jobs/rpc_aio.yml
@@ -264,7 +264,6 @@
       env.TARGET = "aio"
       env.ACTION = "{action}"
       env.SERIES = "{series}"
-      kibana_branch = null
       timeout(time: 8, unit: 'HOURS'){{
         node() {{
           try {{
@@ -279,24 +278,23 @@
               maas = load 'pipeline_steps/maas.groovy'
               kibana = load 'pipeline_steps/kibana.groovy'
             }}
+            // This sets kibana_branch based on STAGES
+            // Note that we do this before the block below since
+            // env.UPGRADE_FROM_ENV gets overwritten
+            if (env.STAGES.contains("Minor Upgrade")
+                || env.STAGES.contains("Major Upgrade")
+                || env.STAGES.contains("Leapfrog Upgrade")) {{
+              kibana_branch = env.UPGRADE_FROM_REF
+            }} else {{
+              kibana_branch = env.KIBANA_SELENIUM_BRANCH
+            }}
             // prepare vars for leapfrog upgrade test of changes proposed to kilo
             // this is a special case as we only usually test upgrades on
             // changes to the destination branch.
             if (env.SERIES == "kilo"
                 && env.TRIGGER == "pr"
                 && env.ACTION == "leapfrogupgrade" ){{
-                kibana_branch = env.UPGRADE_FROM_REF
                 env.UPGRADE_FROM_REF="origin/pr/${{env.ghprbPullId}}/merge"
-            }}
-            // Here we set kibana_branch when it has not been set above
-            if (kibana_branch == null) {{
-              if (env.STAGES.contains("Minor Upgrade")
-                  || env.STAGES.contains("Major Upgrade")
-                  || env.STAGES.contains("Leapfrog Upgrade")) {{
-                kibana_branch = env.UPGRADE_FROM_REF
-              }} else {{
-                kibana_branch = env.KIBANA_SELENIUM_BRANCH
-              }}
             }}
             // We need to checkout the rpc-openstack repo on the CIT Slave
             // so that we can check whether the patch is a docs-only patch
